--- a/scss_2/_myself.scss
+++ b/scss_2/_myself.scss
@@ -15,12 +15,12 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: #121212;
+        background: #ffffff;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: #606360;
+        background: #ffc651;
         border-radius: 10px;
     }
 
@@ -746,13 +746,14 @@
 .minetopfix {
     width: 1150px;
     height: 125px;
-    background: #3d3d3d;
+    background: #ffffff;
     border-radius: 0px 0px 5px 5px;
     position: absolute;
     text-align: center;
     z-index: 6;
     left: 280px;
     top: 0px;
+    box-shadow: 0px 0px 8px 2px #00000017;
 
     //懸浮列假bar
     .fixbar {
@@ -760,11 +761,11 @@
         width: 100%;
         height: 45px;
         border-radius: 5px;
-        background: #313131;
+        background: #f5f5f5;
         bottom: 0px;
         z-index: 2;
-        color: #fff;
-        border: solid 1px #242424;
+        color: #595959;
+        border-top: solid 1px #e8e8e8;
         box-sizing: border-box;
 
         .editbut,.cancelbut,.delbut {
@@ -968,12 +969,12 @@
         .changePassword {
             float: right;
             padding: 3px 5px;
-            color: #dddddd;
-            background: #2b2b2b;
-            border: solid 1px #707070;
+            color: #595959;
+            background: #ffffff;
             border-radius: 5px;
             font-size: 15px;
             margin: 8px 10px 0px 0px;
+            box-shadow: 1px 2px 5px 0px #00000017;
 
             /*for IE 9*/
             @media all and (min-width:0\0) and (min-resolution:.001dpcm){
@@ -986,9 +987,9 @@
             }
 
             &:hover,&:active,&.active {
-                border-color: #aef156;
-                background: linear-gradient(to right, #92e820 0%, #46dd16 100%);
-                color: #272727;
+                background: #ffc651;
+                color: #ffffff;
+                box-shadow: none;
             }
 
             &.none {
@@ -1030,7 +1031,7 @@
             }
 
             span {
-                color: #6ad237;
+                color: #356bf7;
             }
         }
     }
@@ -1120,7 +1121,7 @@
     //左段字
     .leftword {
         font-weight: bold;
-        color: #ffffff;
+        color: #454545;
         float: left;
         margin: 30px 0px 0px 20px;
     }
@@ -1137,7 +1138,7 @@
             font-weight: bold;
             margin: 20px 10px 0px;
             font-size: 17px;
-            color: #ffffff;
+            color: #454545;
             span {
                 display: block;
                 padding-top: 13px;
@@ -1160,7 +1161,7 @@
 .mineHideBoard {
     width: 1155px;
     height: 125px;
-    background: #131313;
+    background: #ededed;
     position: absolute;
     z-index: 5;
     left: 270px;
